# lumen-xarray-sql-bridge

./: .gitignore  PR_NOTES.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: demo_script.md  evaluation_matrix.md  maintainer_faq.md  proposal_brief.md
scripts/: demo.py  live_sql_agent_demo.py
src/lumen_xarray_sql_prototype/: __init__.py  source.py
src/lumen_xarray_sql_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_source.py
